fix: overflowing style for favorite animal questionnaire step

--- a/src/components/favorite-animal-questionnaire-step/favorite-animal-questionnaire-step.css
+++ b/src/components/favorite-animal-questionnaire-step/favorite-animal-questionnaire-step.css
@@ -1,4 +1,7 @@
 .FavoriteAnimalQuesitonnaireStep {
+}
+
+.FavoriteAnimalQuesitonnaireStep-gridHolder {
   overflow: hidden;
 }
 
